# CyberLab-

./: .gitignore  README.md  README_DEV.md  docker-compose.yml  setup_linux.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs  orchestrator.rs  pty.rs  state.rs
client/: CyberLab.uproject
client/Source/CyberLab/: CyberLab.Build.cs  CyberLab.cpp  CyberLab.h
client/Source/CyberLab/Private/: MissionManager.cpp  TerminalComponent.cpp
docs/: GDD.md  MISSION_SCHEMA.md  SECURITY.md  STEAMWORKS_INTEGRATION.md  STEAM_ACHIEVEMENTS.md  STEAM_STORE.md  architecture.md
missions/base_pack/: blue-01.yaml  blue-02.yaml  blue-03.yaml  blue-04.yaml  blue-05.yaml  espionage-01.yaml  espionage-02.yaml  espionage-03.yaml  espionage-04.yaml  espionage-05.yaml  forensics-01.yaml  forensics-02.yaml  forensics-03.yaml  forensics-04.yaml  forensics-05.yaml  initial_bundle.yaml  linux-01.yaml  linux-02.yaml  linux-03.yaml  linux-04.yaml  linux-05.yaml  linux_fundamentals_1.yaml  scripting-01.yaml  scripting-02.yaml  scripting-03.yaml  scripting-04.yaml  scripting-05.yaml  web-01.yaml  web-02.yaml  web-03.yaml  web-04.yaml  web-05.yaml
missions/base_pack/blue/: batch_03.yaml
missions/base_pack/forensics/: batch_04.yaml
missions/base_pack/linux/: batch_01.yaml
missions/base_pack/net/: batch_02.yaml
missions/base_pack/web/: batch_05.yaml
steam/: app_build.vdf
tests/: verify_sandbox.sh
tools/: mission_validator.py
web-client/: index.html  package-lock.json  package.json  vite.config.js
web-client/src/: main.jsx
(+2 files in other folders)
