[package]
name = "cyberlab-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hyper = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["term", "process", "signal"] }
libc = "0.2"
futures = "0.3"
bollard = "0.15" # Docker API
uuid = { version = "1.0", features = ["v4"] }
